# Outdoor-Navigation

./: .gitignore  LICENSE  README.md  pubspec.yaml
.github/workflows/: build.yml
android/: build.gradle  local.properties  settings.gradle
android/src/main/: AndroidManifest.xml  CMakeLists.txt
android/src/main/kotlin/de/hhn/outdoor_navigation/: GnssPlugin.kt
example/: .gitignore  pubspec.yaml
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
example/ios/Runner/: GeneratedPluginRegistrant.m
example/lib/: main.dart
ios/: hello.podspec
ios/Classes/: GnssPlugin.swift
lib/: outdoor_navigation.dart
lib/src/: CMakeLists.txt  abstract_outdoor_navigation.dart  gnss_plugin.dart  ntrip_client.dart  outdoor_navigation.dart  outdoor_navigation_impl.dart  outdoor_navigation_provider.dart  rtklib_bindings.dart
lib/src/impl/: outdoor_navigation_impl.dart
lib/src/model/: gnss_constellation_type.dart  gnss_satelite.dart  location.dart  nmea_message.dart
test/: outdoor_navigation_test.dart
